adding basic search bar and pagination

--- a/src/components/Champions/champions.scss
+++ b/src/components/Champions/champions.scss
@@ -20,3 +20,10 @@ div .championData {
     width: 100%;
     font-size: 0.8em;
 }
+
+.search-bar {
+    color: #fff;
+    background-color: #42a5f5;
+    width: 100%;
+    line-height: 56px;
+}
