adding basic pagination functionality

--- a/src/components/Champions/champions.scss
+++ b/src/components/Champions/champions.scss
@@ -1,10 +1,10 @@
 
-#root {
-    background-image: url('../../assets/images/background.jpg');
-    background-size: 100% 100%;
-    background-repeat: no-repeat;
-    overflow: hidden;
-}
+// #root {
+//     background-image: url('../../assets/images/background.jpg');
+//     background-size: 100vw 100vh;
+//     background-repeat: no-repeat;
+//     overflow: hidden;
+// }
 
 div .championData {
     display: flex;
@@ -14,10 +14,21 @@ div .championData {
 
 .championData > div {
     padding: 10px;
+    width: 25%;
+}
+
+.championInfo {
+    display: flex;
+    flex-direction: column;
+
+    div {
+        margin: 0 auto;
+    }
 }
 
 .championName {
     width: 100%;
+    max-width: 120px;
     font-size: 0.8em;
 }
 
