--- a/src/components/Champions/champions.scss
+++ b/src/components/Champions/champions.scss
@@ -1,10 +1,11 @@
 
-// #root {
-//     background-image: url('../../assets/images/background.jpg');
-//     background-size: 100vw 100vh;
-//     background-repeat: no-repeat;
-//     overflow: hidden;
-// }
+html {
+    background: url('../../assets/images/bg.jpg') no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
 
 div .championData {
     display: flex;
@@ -37,4 +38,13 @@ div .championData {
     background-color: #42a5f5;
     width: 100%;
     line-height: 56px;
+}
+
+#page-numbers {
+    display: flex;
+    justify-content: center;
+}
+
+.page-numbers {
+    margin: 0px 10px;
 }
