champions loading on DOM

--- a/src/components/Champions/champions.scss
+++ b/src/components/Champions/champions.scss
@@ -43,6 +43,7 @@ div .championData {
     width: 100%;
     max-width: 120px;
     font-size: 0.8em;
+    min-height: 75px;
 }
 
 .championName:hover {
