adding champion info styling

--- a/src/components/Champions/champions.scss
+++ b/src/components/Champions/champions.scss
@@ -34,7 +34,7 @@ div .championData {
     }
 }
 
-.championImage > img:hover {
+.championInfo:hover {
     box-shadow: 1px 1px 8px 4px whitesmoke;
     cursor: pointer;
 }
